--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.12",
     "sequelize": "^6.35.2",
     "sharp": "^0.33.1",
     "socket.io": "^4.7.2",
@@ -52,6 +53,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^7.0.5",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
